Adding rough partners section

--- a/index.html
+++ b/index.html
@@ -84,11 +84,35 @@
       <div class="row">
         <h2 data-magellan-destination="partners">Partners</h2>
       </div>
+      <div class="row partner">
+        <div class="headshot small-10 large-4 small-centered large-uncentered columns">
+          <img src="img/jeff.jpg" alt="Jeff Cymet">
+        </div>
+        <div class="small-10 large-8 small-centered large-uncentered columns">
+          <h3><a href="mailto:jeff@cfmlegal.com">Jeff Cymet <small>jeff@cfmlegal.com</small></a></h3>
+          <p>Jeff has extensive experience in international commercial transactions that he acquired at leading law firms and companies throughout the world, including at Kim &amp; Chang, South Korea’s preeminent law firm, and at Israel’s Iscar, Ltd.</p>
+        </div>
+      </div>
       
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, architecto, tempore, nam, vel sint quam error atque voluptas ab ex perspiciatis sunt consequatur adipisci saepe consectetur eaque esse aut blanditiis.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, architecto, tempore, nam, vel sint quam error atque voluptas ab ex perspiciatis sunt consequatur adipisci saepe consectetur eaque esse aut blanditiis.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, architecto, tempore, nam, vel sint quam error atque voluptas ab ex perspiciatis sunt consequatur adipisci saepe consectetur eaque esse aut blanditiis.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, architecto, tempore, nam, vel sint quam error atque voluptas ab ex perspiciatis sunt consequatur adipisci saepe consectetur eaque esse aut blanditiis.</p>
+      <div class="row partner">
+        <div class="headshot small-10 large-4 small-centered large-uncentered columns">
+          <img src="img/alex.jpg" alt="Alexander Fedan">
+        </div>
+        <div class="small-10 large-8 small-centered large-uncentered columns">
+          <h3><a href="mailto:alex@cfmlegal.com">Alexander Fedan <small>alex@cfmlegal.com</small></a></h3>
+          <p>Alexander specializes in commercial and corporate law and international taxation. He also engages in corporate governance, labor law, and international adoption cases.</p>
+        </div>
+      </div>
+
+      <div class="row partner">
+        <div class="headshot small-10 large-4 small-centered large-uncentered columns">
+          <img src="img/alan.jpg" alt="Alan Meerkin">
+        </div>
+        <div class="small-10 large-8 small-centered large-uncentered columns">
+          <h3><a href="mailto:alan@cfmlegal.com">Alan Meerkin <small>alan@cfmlegal.com</small></a></h3>
+          <p>Alan made aliyah to Israel over twenty years ago from Australia. Since then, he has acquired diverse legal experience in private practice and in the legal affairs sections of public organizations, such as the Hebrew University and the Movement for Quality Government.</p>
+        </div>
+      </div>
     </section>
 
     <a name="contact"></a>
