--- a/index.html
+++ b/index.html
@@ -19,9 +19,13 @@
 
     <section id="hero">
       <div class="row">
-        <h1>CFM Legal</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, architecto, tempore, nam, vel sint quam error atque voluptas ab ex perspiciatis sunt consequatur adipisci saepe consectetur eaque esse aut blanditiis.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, architecto, tempore, nam, vel sint quam error atque voluptas ab ex perspiciatis sunt consequatur adipisci saepe consectetur eaque esse aut blanditiis.</p>
+        <div class="logo small-10 large-4 large-push-8 small-centered large-uncentered columns">
+          <img src="img/logotype.svg" alt="CFM Legal Logotype">
+        </div>
+        <div class="small-10 large-8 large-pull-4 small-centered large-uncentered columns">
+          <h1>Cymet, Fedan <span class="amp">&amp;</span> Meerkin</h1>
+          <p>Commercial &amp; International Lawyers</p>
+        </div>
       </div>
     </section>
 
