--- a/index.html
+++ b/index.html
@@ -19,12 +19,16 @@
 
     <section id="hero">
       <div class="row">
-        <div class="logo small-10 large-4 large-push-8 small-centered large-uncentered columns">
+        <div class="logo small-10 large-6 large-push-6 small-centered large-uncentered columns">
           <img src="img/logotype.svg" alt="CFM Legal Logotype">
         </div>
-        <div class="small-10 large-8 large-pull-4 small-centered large-uncentered columns">
-          <h1>Cymet, Fedan <span class="amp">&amp;</span> Meerkin</h1>
-          <p>Commercial &amp; International Lawyers</p>
+        <div class="masthead small-10 large-6 large-pull-6 small-centered large-uncentered columns">
+          <div class="row">
+            <h1>Cymet, Fedan <span class="amp">&amp;</span> Meerkin</h1>
+          </div>
+          <div class="row">
+            <p>Commercial &amp; International Lawyers</p>
+          </div>
         </div>
       </div>
     </section>
