--- a/index.html
+++ b/index.html
@@ -124,26 +124,48 @@
     </section>
 
     <a name="contact"></a>
-    <section id="contact">
-      <h3 data-magellan-destination="contact">Contact</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, architecto, tempore, nam, vel sint quam error atque voluptas ab ex perspiciatis sunt consequatur adipisci saepe consectetur eaque esse aut blanditiis.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, architecto, tempore, nam, vel sint quam error atque voluptas ab ex perspiciatis sunt consequatur adipisci saepe consectetur eaque esse aut blanditiis.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, architecto, tempore, nam, vel sint quam error atque voluptas ab ex perspiciatis sunt consequatur adipisci saepe consectetur eaque esse aut blanditiis.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, architecto, tempore, nam, vel sint quam error atque voluptas ab ex perspiciatis sunt consequatur adipisci saepe consectetur eaque esse aut blanditiis.</p>
+    <section id="contactdetails">
+      <div class="row">
+        <h2 data-magellan-destination="contact" class="small-12 columns">Contact Us</h2>
+        <div class="contact small-10 small-centered large-8 large-uncentered columns">
+          <div class="contactgroup">
+            <h5>Email</h5>
+            <a href="mailto:office@cfmlegal.com">office@cfmlegal.com</a>
+          </div>
+          <div class="contactgroup">
+            <h5>Phone</h5>
+            <a href="tel://+972-77-693-5801">+972 77-693-5801</a>
+          </div>
+          <div class="contactgroup">
+            <h5>Fax</h5>
+            <a href="tel://+972-77-693-5601">+972 77-693-5601</a>
+          </div>
+        </div>
+        <div class="address small-10 small-centered large-4 large-uncentered columns">
+          <h5>Office</h5>
+          <ul class="vcard">
+            <li class="org">CFM Legal Associates</li>
+            <li class="street-address">6 Hahoshlim St.</li>
+            <li class="street-address">Building C, 1st Floor</li>
+            <li class="street-address">POB 12006</li>
+            <li><span class="locality">Herzeliya Pituach</span>, <span class="postal-code">4672201</span></li>
+            <li class="country-name">Israel</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section id="contactmap">
     </section>
 
     <footer>
       &copy; CFM Legal 2013. All Rights Reserved / <a href="mailto:office@cfmlegal.com">office@cfmlegal.com</a>
     </footer>
-<!-- 
-    <div class="row">
-      <div class="large-12 columns">
-        <h1>Welcome to Foundation</h1>
-      </div>
-    </div>
- -->
+
     <script src="bower_components/jquery/jquery.js"></script>
     <script src="bower_components/foundation/js/foundation.min.js"></script>
+<!--    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCu5mQP1TRIIK8m3bFaQdxoIDUoK-mRQTw&sensor=false"></script> -->
+    <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
