Still broken nav header

--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
     <script src="bower_components/modernizr/modernizr.js"></script>
   </head>
   <body>
-    <header data-magellan-expedition="fixed">
-      <dl class="sub-nav">
-        <dd data-magellan-arrival="about"><a href="#about">About</a></dd>
-        <dd data-magellan-arrival="partners"><a href="#partners">Partners</a></dd>
-        <dd data-magellan-arrival="contact"><a href="#contact">Contact</a></dd>
-      </dl>
-    </header>
+    <div class="row" id="nav" data-magellan-expedition="fixed">
+      <div class="small-12 columns" >
+      <header >
+        <dl class="sub-nav">
+          <dd data-magellan-arrival="about"><a href="#about">About</a></dd>
+          <dd data-magellan-arrival="partners"><a href="#partners">Partners</a></dd>
+          <dd data-magellan-arrival="contact"><a href="#contact">Contact</a></dd>
+        </dl>
+      </header>
+      </div>
+    </div>
 
     <section id="hero">
       <div class="row">
