Fix address to proper spelling of Herzliya

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <li class="street-address">6 Hahoshlim St.</li>
             <li class="street-address">Building C, 1st Floor</li>
             <li class="street-address">POB 12006</li>
-            <li><span class="locality">Herzeliya Pituach</span>, <span class="postal-code">4672201</span></li>
+            <li><span class="locality">Herzliya</span>, <span class="postal-code">4672201</span></li>
             <li class="country-name">Israel</li>
           </ul>
         </div>
