Updating partner text

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
         <div class="small-10 large-8 small-centered large-uncentered columns">
           <h3><a href="mailto:jeff@cfmlegal.com">Jeff Cymet <small>jeff@cfmlegal.com</small></a></h3>
-          <p>Jeff has extensive experience in international commercial transactions that he acquired at leading law firms and companies throughout the world, including at Kim &amp; Chang, South Korea’s preeminent law firm, and at Israel’s Iscar, Ltd.</p>
+          <p>Jeff has been advising and representing a wide range of business and individual clients in Israel and internationally for over twenty years. His expertise is in helping businesses and individuals navigate the requirements of doing business in Israel, and in structuring and negotiating corporate and commercial transactions internationally.  Jeff has worked at the leading law firms in Israel, New York and South Korea, in-house at one of Israel's leading manufacturing companies, and as legal adviser to the Israeli Ministry of Justice.</p>
         </div>
       </div>
       
@@ -112,7 +112,7 @@
         </div>
         <div class="small-10 large-8 small-centered large-uncentered columns">
           <h3><a href="mailto:alex@cfmlegal.com">Alexander Fedan <small>alex@cfmlegal.com</small></a></h3>
-          <p>Alexander specializes in commercial and corporate law and international taxation. He also engages in corporate governance, labor law, and international adoption cases.</p>
+          <p>Alexander specializes in commercial and corporate law and international taxation, and is the head of our China business practice.  He also engages in corporate governance, labor law, energy and environmental matters and international adoption cases.</p>
         </div>
       </div>
 
@@ -122,7 +122,7 @@
         </div>
         <div class="small-10 large-8 small-centered large-uncentered columns">
           <h3><a href="mailto:alan@cfmlegal.com">Alan Meerkin <small>alan@cfmlegal.com</small></a></h3>
-          <p>Alan made aliyah to Israel over twenty years ago from Australia. Since then, he has acquired diverse legal experience in private practice and in the legal affairs sections of public organizations, such as the Hebrew University and the Movement for Quality Government.</p>
+          <p>Alan has significant legal experience in both private practice and in public organizations, including the Hebrew University and the Movement for Quality Government. He served as co-director of the office of the Official Receiver specializing in bankruptcy and corporate liquidation, and represented the Administrator General and the State Attorney General. In 2000 Alan established a boutique translation office providing high quality translations to lawyers and professionals in other fields.</p>
         </div>
       </div>
     </section>
