--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <script src="bower_components/modernizr/modernizr.js"></script>
   </head>
   <body>
-    <div class="row" id="nav" data-magellan-expedition="fixed">
-      <div class="small-12 columns" >
-      <header >
-        <dl class="sub-nav">
-          <dd data-magellan-arrival="about"><a href="#about">About</a></dd>
-          <dd data-magellan-arrival="partners"><a href="#partners">Partners</a></dd>
-          <dd data-magellan-arrival="contact"><a href="#contact">Contact</a></dd>
-        </dl>
-      </header>
+    <header data-magellan-expedition="fixed">
+      <div class="row" id="nav">
+        <div class="small-12 columns" >
+          <dl class="sub-nav">
+            <dd data-magellan-arrival="about"><a href="#about">About</a></dd>
+            <dd data-magellan-arrival="partners"><a href="#partners">Partners</a></dd>
+            <dd data-magellan-arrival="contact"><a href="#contact">Contact</a></dd>
+          </dl>
+        </div>
       </div>
-    </div>
+    </header>
 
     <section id="hero">
       <div class="row">
@@ -91,9 +91,10 @@
       </div>
     </section>
 
-    <a name="partners"></a>
+    
     <section id="partners">
       <div class="row">
+        <a name="partners"></a>
         <h2 data-magellan-destination="partners">Partners</h2>
       </div>
       <div class="row partner">
