--- a/index.html
+++ b/index.html
@@ -169,6 +169,8 @@
 
     <script src="bower_components/jquery/jquery.js"></script>
     <script src="bower_components/foundation/js/foundation.min.js"></script>
+    <script src="bower_components/jquery.scrollTo/jquery.scrollTo.min.js"></script>
+    <script src="bower_components/jquery.localScroll/jquery.localScroll.min.js"></script>
 <!--    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCu5mQP1TRIIK8m3bFaQdxoIDUoK-mRQTw&sensor=false"></script> -->
     <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
     <script src="js/app.js"></script>
