--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cymet, Fedan and Meerkin</title>
-    <!-- <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'> -->
+    <title>Cymet, Fedan and Co.</title>
     <link rel="stylesheet" href="css/app.css" />
     <script src="bower_components/modernizr/modernizr.js"></script>
   </head>
@@ -14,7 +13,7 @@
         <div class="small-12 columns" >
           <dl class="sub-nav">
             <dd data-magellan-arrival="about"><a href="#about">About</a></dd>
-            <dd data-magellan-arrival="partners"><a href="#partners">Partners</a></dd>
+            <dd data-magellan-arrival="partners"><a href="#partners">The Team</a></dd>
             <dd data-magellan-arrival="contact"><a href="#contact">Contact</a></dd>
           </dl>
         </div>
@@ -24,11 +23,11 @@
     <section id="hero">
       <div class="row">
         <div class="logo small-10 large-6 large-push-6 small-centered large-uncentered columns">
-          <img src="img/logotype.svg" alt="CFM Legal Logotype">
+          <img src="img/logotype.svg" alt="CF &amp; Co. Legal Logotype">
         </div>
         <div class="masthead small-10 large-6 large-pull-6 small-centered large-uncentered columns">
           <div class="row">
-            <h1>Cymet, Fedan <span class="amp">&amp;</span> Meerkin</h1>
+            <h1>Cymet, Fedan <span class="amp">&amp;</span> Co.</h1>
           </div>
           <div class="row">
             <p>Commercial &amp; International Lawyers</p>
@@ -43,7 +42,7 @@
       <div class="row aboutus" data-magellan-destination="about">
         <div class="small-9 small-centered columns">
           <p class="lede">We provide full-service legal representation to companies and individuals for all of their legal needs, large and small.</p>
-          <p>Our partners have extensive experience in civil and commercial law, acquired at leading companies and law firms in Israel, the United States and Asia.</p>
+          <p>Our staff have extensive experience in civil and commercial law, acquired at leading companies and law firms in Israel, the United States and Asia.</p>
         </div>
       </div>
 
@@ -56,8 +55,8 @@
             <ul class="no-bullet">
               <li>Commercial agreements</li>
               <li>Corporate structuring and governance</li>
+              <li>Labor law</li>
               <li>Bankruptcy and liquidation</li>
-              <li>Intellectual property</li>
               <li>Energy law</li>
               <li>​Negotiation and mediation</li>
             </ul>
@@ -95,15 +94,15 @@
     <section id="partners">
       <div class="row">
         <a name="partners"></a>
-        <h2 data-magellan-destination="partners">Partners</h2>
+        <h2 data-magellan-destination="partners">The Team</h2>
       </div>
       <div class="row partner">
         <div class="headshot small-10 large-4 small-centered large-uncentered columns">
           <img src="img/jeff.jpg" alt="Jeff Cymet">
         </div>
         <div class="small-10 large-8 small-centered large-uncentered columns">
-          <h3><a href="mailto:jeff@cfmlegal.com">Jeff Cymet <small>jeff@cfmlegal.com</small></a></h3>
-          <p>Jeff has been advising and representing a wide range of business and individual clients in Israel and internationally for over twenty years. His expertise is in helping businesses and individuals navigate the requirements of doing business in Israel, and in structuring and negotiating corporate and commercial transactions internationally.  Jeff has worked at the leading law firms in Israel, New York and South Korea, in-house at one of Israel's leading manufacturing companies, and as legal adviser to the Israeli Ministry of Justice.</p>
+          <h3><a href="mailto:jeff@cfmlegal.com">Jeff Cymet <small>Partner &middot; <span class="email">jeff@cfmlegal.com</span></small></a> <small><a href="tel://+972 (52) 745 7500">+972 (52) 745 7500</a></small></h3>
+          <p>Jeff has been advising and representing a wide range of business and individual clients in Israel and internationally for over twenty years. His expertise is in helping businesses and individuals navigate the requirements of doing business in Israel, and in structuring and negotiating corporate and commercial transactions internationally. Jeff has worked at leading law firms in Israel, New York and South Korea, in-house at one of Israel’s leading manufacturing companies, and as legal advisor to the Israeli Ministry of Justice.</p>
         </div>
       </div>
       
@@ -112,8 +111,8 @@
           <img src="img/alex.jpg" alt="Alexander Fedan">
         </div>
         <div class="small-10 large-8 small-centered large-uncentered columns">
-          <h3><a href="mailto:alex@cfmlegal.com">Alexander Fedan <small>alex@cfmlegal.com</small></a></h3>
-          <p>Alexander specializes in commercial and corporate law and international taxation, and is the head of our China business practice.  He also engages in corporate governance, labor law, energy and environmental matters and international adoption cases.</p>
+          <h3><a href="mailto:alex@cfmlegal.com">Alexander Fedan <small>Partner &middot; <span class="email">alex@cfmlegal.com</span></small></a> <small><a href="tel://+972 (55) 882 6867">+972 (55) 882 6867</a></small></h3>
+          <p>Alexander specializes in commercial and corporate law and international taxation, and is head of our China business practice. He also engages in corporate governance, labor law, energy and environmental matters and international adoption cases.</p>
         </div>
       </div>
 
@@ -122,8 +121,8 @@
           <img src="img/alan.jpg" alt="Alan Meerkin">
         </div>
         <div class="small-10 large-8 small-centered large-uncentered columns">
-          <h3><a href="mailto:alan@cfmlegal.com">Alan Meerkin <small>alan@cfmlegal.com</small></a></h3>
-          <p>Alan has significant legal experience in both private practice and in public organizations, including the Hebrew University and the Movement for Quality Government. He served as co-director of the office of the Official Receiver specializing in bankruptcy and corporate liquidation, and represented the Administrator General and the State Attorney General. In 2000 Alan established a boutique translation office providing high quality translations to lawyers and professionals in other fields.</p>
+          <h3><a href="mailto:alan@cfmlegal.com">Alan Meerkin <small>Of Counsel &middot;<span class="email">alan@cfmlegal.com</span></small></a> <small><a href="tel://+972 (54) 547 8462">+972 (54) 547 8462</a></small></h3>
+          <p>Alan is a seasoned commercial lawyer with experience in both private practice and public organizations. He served as co-director of the office of the Official Receiver, specializing in bankruptcy and corporate liquidation, and represented the Administrator General and the State Attorney General, appearing at District and Supreme Court levels. Alan is founder and director of <a href="http://www.meerkin.co.il"><em>Tirgum Yashir</em></a>, a boutique service providing high quality, internationally certified translations for legal and other professionals.</p>
         </div>
       </div>
     </section>
@@ -138,22 +137,20 @@
             <a href="mailto:office@cfmlegal.com">office@cfmlegal.com</a>
           </div>
           <div class="contactgroup">
-            <h5>Phone</h5>
-            <a href="tel://+972-77-693-5801">+972 77-693-5801</a>
+            <h5>Office 1</h5>
+            <a href="tel://+972 (52) 745 7500">+972 (52) 745 7500</a>
           </div>
           <div class="contactgroup">
-            <h5>Fax</h5>
-            <a href="tel://+972-77-693-5601">+972 77-693-5601</a>
+            <h5>Office 2</h5>
+            <a href="tel://+972 (55) 882 6867">+972 (55) 882 6867</a>
           </div>
         </div>
         <div class="address small-10 small-centered large-4 large-uncentered columns">
           <h5>Office</h5>
           <ul class="vcard">
             <li class="org">CFM Legal Associates</li>
-            <li class="street-address">6 Hahoshlim St.</li>
-            <li class="street-address">Building C, 1st Floor</li>
-            <li class="street-address">POB 12006</li>
-            <li><span class="locality">Herzliya</span>, <span class="postal-code">4672201</span></li>
+            <li class="street-address">9/40 Avigur St.</li>
+            <li><span class="locality">Tel Aviv</span>, <span class="postal-code">6937943</span></li>
             <li class="country-name">Israel</li>
           </ul>
         </div>
@@ -164,7 +161,7 @@
     </section>
 
     <footer>
-      &copy; CFM Legal 2013. All Rights Reserved / <a href="mailto:office@cfmlegal.com">office@cfmlegal.com</a>
+      &copy; CFM Legal 2014. All Rights Reserved / <a href="mailto:office@cfmlegal.com">office@cfmlegal.com</a>
     </footer>
 
     <script src="bower_components/jquery/jquery.js"></script>
